# uma-24z-irep-plus-plus

./: README.md
data/processed/: breast-cancer-no-columns-1.csv  breast-cancer-no-columns-12.csv  breast-cancer-no-columns-3.csv  breast-cancer-no-columns-6.csv  breast-cancer-no-columns-8.csv  breast-cancer-noise-0.05.csv  breast-cancer-noise-0.1.csv  breast-cancer-noise-0.15.csv  breast-cancer-noise-0.2.csv  breast-cancer-noise-0.3.csv  breast-cancer.csv
docs/: README.md
results/accuracy/: results_deleted_columns.json  results_model_comparison.json  results_models_comparison.json  results_noises.json  results_prune_percentages.json
src/: experiments.py  get_data.py  irep.py  irepplusplus.py  main.py  plot_results.py  prepare_data.py  pyproject.toml  results_deleted_columns.json  results_noises.json  results_test_sizes.json  ripper.py  ripple.py  train_and_predict.py
