[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Adrian Murawski <adrianmurawski79@gmail.com>", "Jakub Bąba <jakub.baba.stud@pw.edu.pl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
